applied both configdocs (rev2) and doc_settings (rev4) .. lets go over the files now and look for more problems related to spelling and confusing lines of text

--- a/eggdrop.simple.conf
+++ b/eggdrop.simple.conf
@@ -1,10 +1,10 @@
 #! /path/to/executable/eggdrop
 # ^- Set that to the directory eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.simple.conf,v 1.14 2001/11/29 23:25:36 guppy Exp $
+# $Id: eggdrop.simple.conf,v 1.15 2001/12/14 05:43:10 guppy Exp $
 #
 # This is a sample configuration file for your bot.  You will definitely
-# want to edit this, to set up your bot.  Right now, it creates a bot called
+# want to edit this to set up your bot. Right now, it creates a bot called
 # "LamestBot" which sits on the channel #lamest.
 #
 # More options can be found in files in doc/settings/.
@@ -15,8 +15,10 @@
 #
 # PLEASE EDIT THIS FILE COMPLETELY! YOUR BOT WILL NOT FUNCTION PROPERLY IF
 # YOU DO NOT CONFIGURE IT CORRECTLY! WE CAN NOT STRESS THIS ENOUGH!
+#
+# More options can be found in the files in doc/settings/.
 
-# don't edit these 12 lines!!
+# Don't edit the following 12 lines.
 set mod-path "modules/"
 set help-path "help/"
 set text-path "text/"
@@ -27,30 +29,32 @@ loadmodule ctcp
 loadmodule irc
 loadmodule notes
 loadmodule console
-loadmodule uptime
 checkmodule blowfish
 
-# start configuring here!
+# Start configuring here!
 
-##### variables:
+##### Settings:
+
+# Set the nick the bot uses on IRC, and on the botnet
+# unless you specify a separate botnet-nick, here.
 set nick "Lamestbot"
-# the nick of the bot, that which it uses on IRC, and on the botnet
-# unless you specify a separate botnet-nick
 
+# Set the alternative nick which the bot uses on IRC if the nick specified by 'set nick' 
+# is unavailable. All '?' characters will be replaced by random numbers.
 set altnick "Llamab?t"
-# an alternative nick to use if the nick specified by 'set nick' is
-# unavailable. All '?' characters will be replaced by a random number.
 
+# Set here what should be displayed in the real-name field for the bot on IRC.
 set realname "/msg LamestBot hello"
-# what to display in the real-name field for the bot
 
+# This is the bot's server list. The bot will start at the first server listed, 
+# and cycle through them whenever it gets disconnected. You need to change these 
+# servers to YOUR network's servers.
 set servers {
   you.need.to.change.this:6667
 }
-# the server list -- the bot will start at the first server listed, and cycle
-# through them whenever it's disconnected
-# (please note: you need to change these servers to YOUR network's servers)
 
+# This adds the channel #lamest to the bot's channel list. You should change
+# this to a channel you would like the bot to join.
 channel add #lamest {
   chanmode "+nt-likm"
   idle-kick 0
@@ -65,41 +69,69 @@ channel set #lamest +revenge +autovoice
 channel set #lamest -secret -shared +cycle
 channel set #lamest -inactive -seen +nodesynch
 
-set net-type 0
-# set here your network
 # [0/1/2/3/4/5] What is your network?
-# 0 = Efnet (non +e/+I hybrid), 1 = IRCnet, 2 = Undernet, 3 = Dalnet,
-# 4 = Efnet +e/+I hybrid, 5 = Others
+# 0 = EFnet (non +e/+I hybrid)
+# 1 = IRCnet
+# 2 = Undernet
+# 3 = DALnet
+# 4 = EFnet +e/+I hybrid
+# 5 = Others
+set net-type 0
 
-
-# various stuff...
-
+# Set here the port where the eggdrop should listen for telnet connections.
 listen 3333 all
-# set here the port where eggdrop should listen von telnet connections
 
+# Un-comment the next line and set the list of owners of the bot.
+# You NEED to change this setting.
 #set owner "MrLame, MrsLame"
-# set here the list of owners of the bot
 
+##### Files & Directories:
 
-# files & directories
-
+# The following two lines define where to store the bots user and
+# channel files.
 set userfile "LamestBot.user"
 set chanfile "LamestBot.chan"
+
+# This defines where the bot should store temp files.
 set temp-path "/tmp"
+
+# This creates a logfile named eggdrop.log containing private msgs/ctcps,
+# commands, errors, and misc. info from any channel.
 logfile msbxco * "logs/eggdrop.log"
+
+# This creates a logfile of joins, parts, netsplits, kicks, bans, 
+# mode changes, and public chat on the channel #lamest. 
 logfile jpk #lamest "logs/lamest.log"
 
-
-# default console flags
+# Set the default console flags here.
 set console "mkcobxs"
 
+##### Uptime module:
 
-# you have to remove this line to make your bot work
+# This module reports uptime statistics to http://uptime.eggheads.org.
+# Go look and see what your uptime is! It takes about 9 hours to show up,
+# so if your bot isn't listed, try again later.
+# 
+# Information sent to the server includes the bot's uptime, botnet-nick,
+# server, version, and IP address. This information is stored in a temporary 
+# logfile for debugging purposes only. The only publicly available information
+# will be the bot's botnet-nick, version and uptime. If you do not wish for this
+# information to be sent, comment out the following line.
+loadmodule uptime
+
+# You have to remove this line to make your bot start.
 die "you didn't edit your config file! that's a NO NO"
 
 ##### SCRIPTS #####
 
-# these are some commonly loaded (and needed) scripts.
+# This is a good place to load scripts to use with your bot.
+
+# This line loads script.tcl from the scripts directory inside your eggdrop's
+# directory. All scripts should be put there, although you can place them where
+# you like as long as you can supply a fully qualified path to them.
+#
+# source scripts/script.tcl
+
 source scripts/alltools.tcl
 source scripts/action.fix.tcl
 source scripts/compat.tcl
