added BHAB's server password doc fix -- Wcc could you please update the other related docs

--- a/eggdrop.advanced.conf
+++ b/eggdrop.advanced.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your eggdrop executable.
 #
-# $Id: eggdrop.advanced.conf,v 1.37 2001/12/14 05:43:10 guppy Exp $
+# $Id: eggdrop.advanced.conf,v 1.38 2001/12/18 17:19:25 guppy Exp $
 #
 # This is a sample eggdrop configuration file which includes many
 # settings that can be used to configure your bot.
@@ -701,9 +701,16 @@ set init-server { putserv "MODE $botnick +i-ws" }
 # '.jump' or in 'set servers'.
 set default-port 6667
 
-# This is the bot's server list. The bot will start at the first server listed, 
-# and cycle through them whenever it gets disconnected. You need to change these 
+# This is the bot's server list. The bot will start at the first server listed,
+# and cycle through them whenever it gets disconnected. You need to change these
 # servers to YOUR network's servers.
+#
+# The format is: 
+#   server[:port[:password]]
+#
+# Both the port and password fields are optional; however, if you want to set a 
+# password you must also set a port. If a port isn't specified it will default to 
+# your default-port setting.
 set servers {
   you.need.to.change.this:6667
   another.example.com:7000
