--- a/eggdrop.simple.conf
+++ b/eggdrop.simple.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- Set that to the directory eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.simple.conf,v 1.15 2001/12/14 05:43:10 guppy Exp $
+# $Id: eggdrop.simple.conf,v 1.16 2001/12/18 17:19:25 guppy Exp $
 #
 # This is a sample configuration file for your bot.  You will definitely
 # want to edit this to set up your bot. Right now, it creates a bot called
@@ -46,9 +46,16 @@ set altnick "Llamab?t"
 # Set here what should be displayed in the real-name field for the bot on IRC.
 set realname "/msg LamestBot hello"
 
-# This is the bot's server list. The bot will start at the first server listed, 
-# and cycle through them whenever it gets disconnected. You need to change these 
+# This is the bot's server list. The bot will start at the first server listed,
+# and cycle through them whenever it gets disconnected. You need to change these
 # servers to YOUR network's servers.
+#
+# The format is: 
+#   server[:port[:password]]
+#
+# Both the port and password fields are optional; however, if you want to set a 
+# password you must also set a port. If a port isn't specified it will default to 
+# your default-port setting.
 set servers {
   you.need.to.change.this:6667
 }
