--- a/Makefile.in
+++ b/Makefile.in
@@ -2,7 +2,7 @@
 #  This is the Makefile for EGGDROP (the irc bot)
 #  You should never need to edit this.
 #
-# $Id: Makefile.in,v 1.28 2001/11/11 20:24:44 guppy Exp $
+# $Id: Makefile.in,v 1.29 2001/12/20 00:10:42 guppy Exp $
 
 SHELL = @SHELL@
 top_srcdir = @top_srcdir@
@@ -135,6 +135,7 @@ distclean: eggclean clean-modconfig
 	@cd src/mod && $(MAKE) distclean
 	@rm -f Makefile doc/Makefile scripts/Makefile src/Makefile src/md5/Makefile src/compat/Makefile src/mod/Makefile
 	@rm -f config.cache config.log config.status config.h lush.h
+	@rm -rf autom4te.cache
 
 distrib: distclean
 	@rm -f `find . \( -name '*~' -o -name '*#' -o -name '*.orig' \
