some small changes leading upto 1.6.8 (hopefully unless there is a problem installing the cvs on freebsd machines)

--- a/eggdrop.advanced.conf
+++ b/eggdrop.advanced.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your eggdrop executable.
 #
-# $Id: eggdrop.advanced.conf,v 1.38 2001/12/18 17:19:25 guppy Exp $
+# $Id: eggdrop.advanced.conf,v 1.39 2001/12/30 18:38:21 guppy Exp $
 #
 # This is a sample eggdrop configuration file which includes many
 # settings that can be used to configure your bot.
@@ -1169,7 +1169,7 @@ set info-party 0
 # Please note that when you change your encryption method later (i.e.
 # using other modules like a md5 module), you can't use your current
 # userfile anymore. Eggdrop will not start without an encryption module.
-#checkmodule blowfish
+#loadmodule blowfish
 
 
 #### ASSOC MODULE ####
