--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your eggdrop executable.
 #
-# $Id: eggdrop.complete.conf,v 1.43 2001/12/18 17:19:25 guppy Exp $
+# $Id: eggdrop.complete.conf,v 1.44 2001/12/30 18:38:22 guppy Exp $
 #
 # This is a sample eggdrop configuration file which includes all possible
 # settings that can be used to configure your bot.
@@ -1266,7 +1266,7 @@ set info-party 0
 # Please note that when you change your encryption method later (i.e.
 # using other modules like a md5 module), you can't use your current
 # userfile anymore. Eggdrop will not start without an encryption module.
-#checkmodule blowfish
+#loadmodule blowfish
 
 
 #### ASSOC MODULE ####
