--- a/eggdrop.simple.conf
+++ b/eggdrop.simple.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- Set that to the directory eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.simple.conf,v 1.16 2001/12/18 17:19:25 guppy Exp $
+# $Id: eggdrop.simple.conf,v 1.17 2001/12/30 18:38:22 guppy Exp $
 #
 # This is a sample configuration file for your bot.  You will definitely
 # want to edit this to set up your bot. Right now, it creates a bot called
@@ -29,7 +29,7 @@ loadmodule ctcp
 loadmodule irc
 loadmodule notes
 loadmodule console
-checkmodule blowfish
+loadmodule blowfish
 
 # Start configuring here!
 
