--- a/doc/settings/core.settings
+++ b/doc/settings/core.settings
@@ -536,8 +536,6 @@ source scripts/script.tcl
 
     source scripts/alltools.tcl
     source scripts/action.fix.tcl
+     _________________________________________________________________
 
-
-  ________________________________________________________________________
-
-Copyright (C) 2002 Eggheads Development Team
+   Copyright (C) 2000, 2001, 2002 Eggheads Development Team
