added Wcc's latest doc (wasn't sent via email since his stmp is busted)

--- a/eggdrop.advanced.conf
+++ b/eggdrop.advanced.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your eggdrop executable.
 #
-# $Id: eggdrop.advanced.conf,v 1.39 2001/12/30 18:38:21 guppy Exp $
+# $Id: eggdrop.advanced.conf,v 1.40 2002/01/03 01:05:42 guppy Exp $
 #
 # This is a sample eggdrop configuration file which includes many
 # settings that can be used to configure your bot.
@@ -866,7 +866,7 @@ loadmodule irc
 # Set this to 1 if you want to bounce all server bans.
 set bounce-bans 1
 
-# Set this to 1 if you want to bounce all the server modes.
+# Set this to 1 if you want to bounce all server modes.
 set bounce-modes 0
 
 # Set here the maximum number of bans you want the bot to set on a channel.
@@ -884,8 +884,8 @@ set max-modes 30
 set kick-fun 0
 
 # Set this to 1 if you want the bot to ban for control character/ctcp
-# avalanches to a channel. Can prevent kick floods, but also fill the
-# banlist.
+# avalanches to a channel. This can prevent kick floods, but it also can
+# fill the banlist.
 set ban-fun 0
 
 # If you want people to be able to add themselves to the bot's userlist
@@ -908,7 +908,7 @@ set mode-buf-length 200
 
 # Many IRCops find bots by seeing if they reply to 'hello' in a msg. 
 # You can change this to another word by un-commenting the following
-# two lines, and changing "myword" to the word wish to use instead of
+# two lines and changing "myword" to the word wish to use instead of
 # 'hello'. It must be a single word.
 #unbind msg - hello *msg:hello
 #bind msg - myword *msg:hello
@@ -923,8 +923,8 @@ unbind msg - addhost *msg:addhost
 # If you are so lame you want the bot to display peoples info lines, even
 # when you are too lazy to add their chanrecs to a channel, set this to 1.
 # *NOTE* This means *every* user with an info line will have their info
-# display on EVERY channel they join (provided they have been gone longer
-# than wait-info).
+# line displayed on EVERY channel they join (provided they have been gone 
+# longer than wait-info).
 set no-chanrec-info 0
 
 ### IRC MODULE - IRCnet SPECIFIC FEATURES (net-type 1) ###
