--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -1,5 +1,5 @@
 # Makefile for doc/
-# $Id: Makefile.in,v 1.16 2002/01/02 21:51:24 tothwolf Exp $
+# $Id: Makefile.in,v 1.17 2002/01/27 04:14:25 wcc Exp $
 
 SHELL = @SHELL@
 top_srcdir = @top_srcdir@
@@ -12,9 +12,10 @@ INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 
-DOCS = BOTNET BUG-REPORT CONTENTS KNOWN-PROBLEMS MODULES \
-UPDATES.pre1.5 UPDATES1.5 UPDATES1.6 compiling.FAQ eggdrop.doc \
-patch.howto tcl-commands.doc tricks text-substitutions.doc
+DOCS = ABOUT BOTNET BUG-REPORT compiling.FAQ CONTENTS eggdrop.doc \
+first_script.txt KNOWN-PROBLEMS MODULES PARTYLINE patch.howto \
+tcl-commands.doc text-substitutions.doc tricks UPDATES.pre1.5 UPDATES1.5 \
+UPDATES1.6
 
 MAN1 = man1/eggdrop.1
 
