--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your eggdrop executable.
 #
-# $Id: eggdrop.complete.conf,v 1.45 2002/01/03 01:05:42 guppy Exp $
+# $Id: eggdrop.complete.conf,v 1.46 2002/02/04 03:53:55 wcc Exp $
 #
 # This is a sample eggdrop configuration file which includes all possible
 # settings that can be used to configure your bot.
@@ -1110,6 +1110,9 @@ set xfer-timeout 30
 # resync buffer which saves all changes done to the userfile during
 # the disconnect. When they reconnect, they will not have to transfer 
 # the complete user file, but, instead, just send the resync buffer.
+#
+# NOTE: This has been known to cause loss of channel flags and other
+# problems. Using this setting is not recommended.
 #set allow-resync 0
 
 # This setting specifies how long to hold another bots resync data
