Minor config file doc update.

--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your eggdrop executable.
 #
-# $Id: eggdrop.complete.conf,v 1.46 2002/02/04 03:53:55 wcc Exp $
+# $Id: eggdrop.complete.conf,v 1.47 2002/02/13 05:22:59 wcc Exp $
 #
 # This is a sample eggdrop configuration file which includes all possible
 # settings that can be used to configure your bot.
@@ -771,6 +771,7 @@ set altnick "Llamab?t"
 set realname "/msg LamestBot hello"
 
 # Set here a script to run (if any) when first connecting to a server.
+# This is limited to 120 characters.
 set init-server { putserv "MODE $botnick +i-ws" }
 
 # Set the default port which should be used if none is specified with
