--- a/eggdrop.advanced.conf
+++ b/eggdrop.advanced.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your eggdrop executable.
 #
-# $Id: eggdrop.advanced.conf,v 1.40 2002/01/03 01:05:42 guppy Exp $
+# $Id: eggdrop.advanced.conf,v 1.41 2002/02/13 05:22:59 wcc Exp $
 #
 # This is a sample eggdrop configuration file which includes many
 # settings that can be used to configure your bot.
@@ -695,6 +695,7 @@ set altnick "Llamab?t"
 set realname "/msg LamestBot hello"
 
 # Set here a script to run (if any) when first connecting to a server.
+# This is limited to 120 characters.
 set init-server { putserv "MODE $botnick +i-ws" }
 
 # Set the default port which should be used if none is specified with
