--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your eggdrop executable.
 #
-# $Id: eggdrop.complete.conf,v 1.47 2002/02/13 05:22:59 wcc Exp $
+# $Id: eggdrop.complete.conf,v 1.48 2002/02/28 05:13:54 wcc Exp $
 #
 # This is a sample eggdrop configuration file which includes all possible
 # settings that can be used to configure your bot.
@@ -10,7 +10,7 @@
 # doc/settings/.
 
 
-##### GENERAL STUFF #####
+##### BASIC SETTINGS #####
 
 # This setting defines the username the bot uses on IRC. This setting has 
 # no effect if an ident daemon is running on your bot's machine.
@@ -27,15 +27,15 @@ set network "I.didn't.edit.my.config.file.net"
 # This setting defines the timezone is your bot in. It's used for internal
 # routines as well as for logfile timestamping and scripting purposes.
 # The timezone string specifies the name of the timezone and must be three
-# or more alphabetic characters.
-# E.x. Central European Time(UTC+1) should be "CET".
+# or more alphabetic characters. For example, Central European Time(UTC+1)
+# should be "CET".
 set timezone "EST"
 
-# The offset setting specifies the time value to be added to the local time
-# to get Coordinated Universal Time (UTC aka GMT). The offset is positive if
-# the local timezone is west of the Prime Meridian and negative if it is east.
-# The value (in hours) must be between -23 and 23.
-# E.x. If the timezone is UTC+1, the offset is -1.
+# The offset setting specifies the time value to be added to the local 
+# time to get Coordinated Universal Time (UTC aka GMT). The offset is 
+# positive if the local timezone is west of the Prime Meridian and 
+# negative if it is east. The value (in hours) must be between -23 and
+# 23. For example, if the timezone is UTC+1, the offset is -1.
 set offset "5"
 
 # If you don't want to use the timezone setting for scripting purposes only,
@@ -293,7 +293,7 @@ set paranoid-telnet-flood 1
 set resolve-timeout 15
 
 
-##### MORE ADVANCED STUFF #####
+##### MORE ADVANCED SETTINGS #####
 
 # Set this to your socks host if your eggdrop sits behind a firewall.
 # If you use a Sun "telnet passthru" firewall, use this setting:
@@ -362,7 +362,7 @@ set must-be-owner 1
 
 # Comment out this line to add the 'simul' partyline command (owners
 # can manipulate other people on the party line). Please select owners
-# wisely, and use this command ethically!
+# wisely and use this command ethically!
 unbind dcc n simul *dcc:simul
 
 # Set here the maximum number of dcc connections you will allow. You can
@@ -414,7 +414,7 @@ loadmodule dns
 #### CHANNELS MODULE ####
 
 # This module provides channel related support for the bot. Without it,
-# you wont be able to make the bot join a channel or save channel
+# you won't be able to make the bot join a channel or save channel
 # specific userfile information.
 loadmodule channels
 
@@ -698,7 +698,7 @@ channel add #lamest {
 # inactive
 #    This prevents the bot from joining the channel (or makes it leave
 #    the channel if it is already there). It can be useful to make the
-#    bot leave a channel without loosing it's settings, channel-specific
+#    bot leave a channel without loosing its settings, channel-specific
 #    user flags, channel bans, and without affecting sharing.
 #
 # seen
@@ -972,7 +972,7 @@ set learn-users 0
 
 # Set here the time (in seconds) to wait for someone to return from
 # a netsplit (i.e. wasop will expire afterwards). Set this to 1500
-# on IRCnet since it's nick delay stops after 30 minutes.
+# on IRCnet since its nick delay stops after 30 minutes.
 set wait-split 600
 
 # Set here the time (in seconds) that someone must have been off-channel
@@ -1121,7 +1121,7 @@ set xfer-timeout 30
 #set resync-time 900
 
 # When sharing user lists, DON'T ACCEPT global flag changes from other bots?
-# NOTE: The bot will still send changes made on the bot, it just wont accept
+# NOTE: The bot will still send changes made on the bot, it just won't accept
 # any global flag changes from other bots.
 #set private-global 0
 
@@ -1134,7 +1134,7 @@ set xfer-timeout 30
 # will force all userlist changes to be made via the hub.
 #set private-user 0
 
-# This setting makes the bot discard it's own bot records in favor of
+# This setting makes the bot discard its own bot records in favor of
 # the ones sent by the hub.
 # NOTE: No passwords or botflags are shared, only ports and
 # address are added to sharing procedure. This only works with hubs that
