More small doc fixes

--- a/eggdrop.advanced.conf
+++ b/eggdrop.advanced.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your eggdrop executable.
 #
-# $Id: eggdrop.advanced.conf,v 1.42 2002/02/28 05:13:54 wcc Exp $
+# $Id: eggdrop.advanced.conf,v 1.43 2002/03/01 05:59:39 wcc Exp $
 #
 # This is a sample eggdrop configuration file which includes many
 # settings that can be used to configure your bot.
@@ -621,7 +621,7 @@ channel add #lamest {
 # inactive
 #    This prevents the bot from joining the channel (or makes it leave
 #    the channel if it is already there). It can be useful to make the
-#    bot leave a channel without loosing its settings, channel-specific
+#    bot leave a channel without losing its settings, channel-specific
 #    user flags, channel bans, and without affecting sharing.
 #
 # seen
