--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your eggdrop executable.
 #
-# $Id: eggdrop.complete.conf,v 1.49 2002/03/01 05:59:39 wcc Exp $
+# $Id: eggdrop.complete.conf,v 1.50 2002/03/07 21:37:58 guppy Exp $
 #
 # This is a sample eggdrop configuration file which includes all possible
 # settings that can be used to configure your bot.
@@ -388,7 +388,7 @@ set dupwait-timeout 5
 # sure that you have double-checked every setting. There's also a similar line
 # lower down, just to make sure you're reading :)
 
-die "Please edit your config file."
+die "Please make sure you edit your config file completely."
 
 
 ##### MODULES ##### 
@@ -1225,7 +1225,7 @@ set notify-users 1
 set notify-onjoin 1
 
 # Comment out this next line. Otherwise, your bot won't start.
-die "You didn't edit your config file like you were told, did you?"
+die "You didn't edit your config file completely like you were told, did you?"
 
 
 #### CONSOLE MODULE ####
