Fixed a small typo in the channels module documentation.

--- a/eggdrop.advanced.conf
+++ b/eggdrop.advanced.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your eggdrop executable.
 #
-# $Id: eggdrop.advanced.conf,v 1.43 2002/03/01 05:59:39 wcc Exp $
+# $Id: eggdrop.advanced.conf,v 1.44 2002/03/07 23:32:02 wcc Exp $
 #
 # This is a sample eggdrop configuration file which includes many
 # settings that can be used to configure your bot.
@@ -569,7 +569,7 @@ channel add #lamest {
 #    Allow invites to be made by users directly? If turned off, the
 #    bot will require all invites to be made through the bot's console.
 #
-# autop
+# autoop
 #    Op users with the +o flag as soon as they join the channel?
 #    This is insecure and not recommended.
 #
