--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your eggdrop executable.
 #
-# $Id: eggdrop.complete.conf,v 1.50 2002/03/07 21:37:58 guppy Exp $
+# $Id: eggdrop.complete.conf,v 1.51 2002/03/07 23:32:02 wcc Exp $
 #
 # This is a sample eggdrop configuration file which includes all possible
 # settings that can be used to configure your bot.
@@ -646,7 +646,7 @@ channel add #lamest {
 #    Allow invites to be made by users directly? If turned off, the
 #    bot will require all invites to be made through the bot's console.
 #
-# autop
+# autoop
 #    Op users with the +o flag as soon as they join the channel?
 #    This is insecure and not recommended.
 #
