--- a/eggdrop.simple.conf
+++ b/eggdrop.simple.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- Set that to the directory eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.simple.conf,v 1.17 2001/12/30 18:38:22 guppy Exp $
+# $Id: eggdrop.simple.conf,v 1.18 2002/03/09 21:14:14 wcc Exp $
 #
 # This is a sample configuration file for your bot.  You will definitely
 # want to edit this to set up your bot. Right now, it creates a bot called
@@ -39,7 +39,7 @@ loadmodule blowfish
 # unless you specify a separate botnet-nick, here.
 set nick "Lamestbot"
 
-# Set the alternative nick which the bot uses on IRC if the nick specified by 'set nick' 
+# Set the alternative nick which the bot uses on IRC if the nick specified by 'set nick'
 # is unavailable. All '?' characters will be replaced by random numbers.
 set altnick "Llamab?t"
 
@@ -50,11 +50,11 @@ set realname "/msg LamestBot hello"
 # and cycle through them whenever it gets disconnected. You need to change these
 # servers to YOUR network's servers.
 #
-# The format is: 
+# The format is:
 #   server[:port[:password]]
 #
-# Both the port and password fields are optional; however, if you want to set a 
-# password you must also set a port. If a port isn't specified it will default to 
+# Both the port and password fields are optional; however, if you want to set a
+# password you must also set a port. If a port isn't specified it will default to
 # your default-port setting.
 set servers {
   you.need.to.change.this:6667
@@ -106,8 +106,8 @@ set temp-path "/tmp"
 # commands, errors, and misc. info from any channel.
 logfile msbxco * "logs/eggdrop.log"
 
-# This creates a logfile of joins, parts, netsplits, kicks, bans, 
-# mode changes, and public chat on the channel #lamest. 
+# This creates a logfile of joins, parts, netsplits, kicks, bans,
+# mode changes, and public chat on the channel #lamest.
 logfile jpk #lamest "logs/lamest.log"
 
 # Set the default console flags here.
@@ -118,9 +118,9 @@ set console "mkcobxs"
 # This module reports uptime statistics to http://uptime.eggheads.org.
 # Go look and see what your uptime is! It takes about 9 hours to show up,
 # so if your bot isn't listed, try again later.
-# 
+#
 # Information sent to the server includes the bot's uptime, botnet-nick,
-# server, version, and IP address. This information is stored in a temporary 
+# server, version, and IP address. This information is stored in a temporary
 # logfile for debugging purposes only. The only publicly available information
 # will be the bot's botnet-nick, version and uptime. If you do not wish for this
 # information to be sent, comment out the following line.
