Added a few channels to the README and readme.html and made references to other docs in the html files links to their respective html files.

--- a/doc/settings/core.settings
+++ b/doc/settings/core.settings
@@ -221,8 +221,7 @@ logfile <logflags> <channel> "logs/logfile"
 
   set motd "text/motd"
     The MOTD (Message Of The day) is displayed when people dcc chat or telnet
-    to the bot. Look at doc/settings.motd or type '.help set motd' in DCC 
-    CHAT or telnet connection for options.
+    to the bot. Look at doc/text-substitutions.doc for options.
 
 
   set telnet-banner "text/banner"
