--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your eggdrop executable.
 #
-# $Id: eggdrop.complete.conf,v 1.52 2002/03/09 21:14:14 wcc Exp $
+# $Id: eggdrop.complete.conf,v 1.53 2002/03/10 18:10:27 wcc Exp $
 #
 # This is a sample eggdrop configuration file which includes all possible
 # settings that can be used to configure your bot.
@@ -175,8 +175,7 @@ set text-path "text/"
 set temp-path "/tmp"
 
 # The MOTD (Message Of The day) is displayed when people dcc chat or telnet
-# to the bot. Look at doc/settings.motd or type '.help set motd' in DCC
-# CHAT or telnet connection for options.
+# to the bot. Look at doc/text-substitutions.doc for options.
 set motd "text/motd"
 
 # This banner will be displayed on telnet connections.
