* fixed a few config file problems
* chattr's description in tcl-commands.doc was unclear relating to
  channel-specific flag changes

--- a/eggdrop.advanced.conf
+++ b/eggdrop.advanced.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your eggdrop executable.
 #
-# $Id: eggdrop.advanced.conf,v 1.46 2002/03/10 18:10:27 wcc Exp $
+# $Id: eggdrop.advanced.conf,v 1.47 2002/03/23 17:27:51 wcc Exp $
 #
 # This is a sample eggdrop configuration file which includes many
 # settings that can be used to configure your bot.
@@ -22,7 +22,7 @@ set username "lamest"
 
 # This setting defines which contact person should be shown in .status,
 # /msg help, and other places. You really should include this information.
-set admin "Lamer <email: lamer@lamest.lame.org)"
+set admin "Lamer <email: lamer@lamest.lame.org>"
 
 # This setting is used only for info to share with others on your botnet.
 # Set this to the IRC network your bot is connected to.
