--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your eggdrop executable.
 #
-# $Id: eggdrop.complete.conf,v 1.53 2002/03/10 18:10:27 wcc Exp $
+# $Id: eggdrop.complete.conf,v 1.54 2002/03/23 17:27:51 wcc Exp $
 #
 # This is a sample eggdrop configuration file which includes all possible
 # settings that can be used to configure your bot.
@@ -18,7 +18,7 @@ set username "lamest"
 
 # This setting defines which contact person should be shown in .status,
 # /msg help, and other places. You really should include this information.
-set admin "Lamer <email: lamer@lamest.lame.org)"
+set admin "Lamer <email: lamer@lamest.lame.org>"
 
 # This setting is used only for info to share with others on your botnet.
 # Set this to the IRC network your bot is connected to.
@@ -157,7 +157,7 @@ set userfile "LamestBot.user"
 
 # Specify here the filename eggdrop will save its pid to. If no
 # pidfile is specified, pid.(botnet-nick) will be used.
-#set pidfile "pid.${botnet-nick}"
+#set pidfile "pid.LamestBot"
 
 # If you want your userfile to be sorted upon saving, enable this setting.
 # This causes the bot to use bit more CPU when saving the usefile.
