Fixed a small documentation error with the switch-logfiles-at setting.

--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your eggdrop executable.
 #
-# $Id: eggdrop.complete.conf,v 1.54 2002/03/23 17:27:51 wcc Exp $
+# $Id: eggdrop.complete.conf,v 1.55 2002/04/21 16:09:40 wcc Exp $
 #
 # This is a sample eggdrop configuration file which includes all possible
 # settings that can be used to configure your bot.
@@ -130,9 +130,7 @@ set keep-all-logs 0
 set logfile-suffix ".%d%b%Y"
 
 # You can specifiy when eggdrop should switch logfiles and start fresh. You must
-# use military time for this setting. 300 is the default, and describes 00:00.
-# Note that a leading 0 will make Tcl think this is an octal value,
-# something you probably don't want.
+# use military time for this setting. 300 is the default, and describes 03:00 (AM).
 set switch-logfiles-at 300
 
 # "Writing user file..." and "Writing channel file..." messages
