--- a/doc/settings/core.settings
+++ b/doc/settings/core.settings
@@ -160,10 +160,9 @@ logfile <logflags> <channel> "logs/logfile"
 
 
   set switch-logfiles-at 300
-    You can specifiy when Eggdrop should switch logfiles and start fresh. 
-    You must use military time for this setting. 300 is default and 
-    describes 00:00. Note that a leading 0 will make Tcl think this is an
-    octal value, something you probably don't want.
+    You can specifiy when Eggdrop should switch logfiles and start fresh.
+    use military time for this setting. 300 is the default, and describes
+    03:00 (AM).
 
 
   set quiet-save 0
