More doc updates.

--- a/doc/settings/core.settings
+++ b/doc/settings/core.settings
@@ -1,5 +1,5 @@
 Eggdrop Core Settings
-Last revised: February 5, 2002
+Last revised: May 24, 2002
      _________________________________________________________________
 
                            Eggdrop Core Settings
@@ -196,7 +196,8 @@ logfile <logflags> <channel> "logs/logfile"
 
 
   set pidfile "pid.LamestBot"
-    Specify here the filename Eggdrop will save its pid to.
+    Specify here the filename Eggdrop will save its pid to. If no pidfile is
+    specified, pid.(botnet-nick) will be used.
 
 
   set sort-users 0
@@ -205,13 +206,13 @@ logfile <logflags> <channel> "logs/logfile"
 
 
   set help-path "help/"
-    Specify here where Eggdrop should look for help files.
-    Don't modify this setting unless you know what you're doing!
+    Specify here where Eggdrop should look for help files. Don't modify this
+    setting unless you know what you're doing!
 
 
   set text-path "text/"
-     Specify here where Eggdrop should look for text files. This is
-     used for certain Tcl and DCC commands.
+    Specify here where Eggdrop should look for text files. This is used for
+    certain Tcl and DCC commands.
 
 
   set temp-path "/tmp"
@@ -224,7 +225,8 @@ logfile <logflags> <channel> "logs/logfile"
 
 
   set telnet-banner "text/banner"
-    This banner will be displayed on telnet connections.
+    This banner will be displayed on telnet connections. Look at
+    doc/text-substitutions.doc for options.
 
 
   set userfile-perm 0600
@@ -303,8 +305,8 @@ should read doc/BOTNET before modifying these settings.
 
   set protect-telnet 0
     This setting will drop telnet connections not matching a known host. It
-    greatly improves protection from IRCOps, but makes it impossible for 
-    limbo bots to add hosts or have NEW as a valid login.
+    greatly improves protection from IRCops, but makes it impossible to add
+    hosts on limbo (NOIRC) bots or have NEW as a valid login.
 
   set dcc-sanitycheck 0
     This setting will make the bot ignore DCC chat requests which appear to
@@ -414,9 +416,8 @@ should read doc/BOTNET before modifying these settings.
 
 
   set default-flags "hp"
-    Enter the flags that all new users should get by default.
-    See '.help whois' on the partyline for a list of flags and
-    their descriptions.
+    Enter the flags that all new users should get by default. See '.help
+    whois' on the partyline for a list of flags and their descriptions.
 
 
   set whois-fields "url birthday"
