--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,12 +1,12 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your eggdrop executable.
 #
-# $Id: eggdrop.complete.conf,v 1.55 2002/04/21 16:09:40 wcc Exp $
+# $Id: eggdrop.complete.conf,v 1.56 2002/05/28 20:15:59 wcc Exp $
 #
 # This is a sample eggdrop configuration file which includes all possible
 # settings that can be used to configure your bot.
 #
-# More detailed descriptions of all those settings can be found in
+# More detailed descriptions of all these settings can be found in
 # doc/settings/.
 
 
@@ -45,7 +45,7 @@ set offset "5"
 # If you're using virtual hosting (your machine has more than 1 IP), you
 # may want to specify the particular IP to bind to. You can specify either
 # by hostname or by IP. You may also want to set the hostname here if
-# eggdrop has trouble detecting it when it starts up.
+# Eggdrop has trouble detecting it when it starts up.
 #set my-hostname "virtual.host.com"
 #set my-ip "99.99.0.0"
 
@@ -93,15 +93,14 @@ set max-logs 5
 
 # This is the maximum size of your logfiles. Set it to 0 to disable.
 # This value is in kilobytes, so '550' would mean cycle logs when it
-# reaches the size of 550 kilobytes.
-# Note that this only works if you have keep-all-logs 0 (OFF).
+# reaches the size of 550 kilobytes. Note that this only works if you
+# have keep-all-logs 0 (OFF).
 set max-logsize 0
 
 # This could be good if you have had problem with the logfile filling
 # your quota/hard disk or if you log +p and publish it to the web and
-# need more up-to-date info.
-# Note that this setting might increase the CPU usage of your bot (on
-# the other hand it will decrease your mem usage).
+# need more up-to-date info. Note that this setting might increase the
+# CPU usage of your bot (on the other hand it will decrease your mem usage).
 set quick-logs 0
 
 # This creates a logfile named eggdrop.log containing private msgs/ctcps,
@@ -129,12 +128,13 @@ set keep-all-logs 0
 # be used _always_.
 set logfile-suffix ".%d%b%Y"
 
-# You can specifiy when eggdrop should switch logfiles and start fresh. You must
-# use military time for this setting. 300 is the default, and describes 03:00 (AM).
+# You can specifiy when eggdrop should switch logfiles and start fresh. You
+# must use military time for this setting. 300 is the default, and describes
+# 03:00 (AM).
 set switch-logfiles-at 300
 
-# "Writing user file..." and "Writing channel file..." messages
-# won't be logged anymore if this option is enabled.
+# "Writing user file..." and "Writing channel file..." messages won't be
+# logged anymore if this option is enabled.
 set quiet-save 0
 
 
@@ -153,20 +153,20 @@ set console "mkcobxs"
 # Specify here the filename your userfile should be saved as.
 set userfile "LamestBot.user"
 
-# Specify here the filename eggdrop will save its pid to. If no
-# pidfile is specified, pid.(botnet-nick) will be used.
+# Specify here the filename eggdrop will save its pid to. If no pidfile is
+# specified, pid.(botnet-nick) will be used.
 #set pidfile "pid.LamestBot"
 
 # If you want your userfile to be sorted upon saving, enable this setting.
 # This causes the bot to use bit more CPU when saving the usefile.
 set sort-users 0
 
-# Specify here where eggdrop should look for help files.
-# Don't modify this setting unless you know what you're doing!
+# Specify here where eggdrop should look for help files. Don't modify this
+# setting unless you know what you're doing!
 set help-path "help/"
 
-# Specify here where eggdrop should look for text files. This is
-# used for certain Tcl and DCC commands.
+# Specify here where eggdrop should look for text files. This is used for
+# certain Tcl and DCC commands.
 set text-path "text/"
 
 # Set here a place to store temporary files.
@@ -176,11 +176,12 @@ set temp-path "/tmp"
 # to the bot. Look at doc/text-substitutions.doc for options.
 set motd "text/motd"
 
-# This banner will be displayed on telnet connections.
+# This banner will be displayed on telnet connections. Look at
+# doc/text-substitutions.doc for options.
 set telnet-banner "text/banner"
 
-# This specifies what permissions the user, channel, and notes files should be set to.
-# The octal values are the same as for the chmod system command.
+# This specifies what permissions the user, channel, and notes files should
+# be set to. The octal values are the same as for the chmod system command.
 #
 # To remind you:
 #
@@ -189,9 +190,8 @@ set telnet-banner "text/banner"
 #    0660  rw-rw----   0440  r--r-----   0220  -w--w----    g - group
 #    0666  rw-rw-rw-   0444  r--r--r--   0222  -w--w--w-    o - others
 #
-# Note that the default 0600 is the most secure one and should only be
-# changed if you need your files for shell scripting or other external
-# applications.
+# Note that the default 0600 is the most secure one and should only be changed
+# if you need your files for shell scripting or other external applications.
 set userfile-perm 0600
 
 
@@ -228,9 +228,9 @@ listen 3333 all
 
 # This setting defines whether or not people can boot users on the eggdrop
 # from other bots in your botnet. Valid settings are:
-#    0 - allow *no* outside boots
-#    1 - allow boots from sharebots
-#    2 - allow any boots
+#   0 - allow *no* outside boots
+#   1 - allow boots from sharebots
+#   2 - allow any boots
 set remote-boots 2
 
 # This setting prohibits remote bots from telling your eggdrop to unlink from
@@ -238,8 +238,8 @@ set remote-boots 2
 set share-unlinks 1
 
 # This setting will drop telnet connections not matching a known host. It
-# greatly improves protection from IRCOps, but makes it impossible for NOIRC
-# bots to add hosts or have NEW as a valid login.
+# greatly improves protection from IRCops, but makes it impossible to add
+# hosts on limbo (NOIRC) bots or have NEW as a valid login.
 set protect-telnet 0
 
 # This setting will make the bot ignore DCC chat requests which appear to
@@ -328,9 +328,8 @@ set hourly-updates 00
 # Who should a note be sent to when new users are learned?
 set notify-newusers "$owner"
 
-# Enter the flags that all new users should get by default.
-# See '.help whois' on the partyline for a list of flags and
-# their descriptions.
+# Enter the flags that all new users should get by default. See '.help whois'
+# on the partyline for a list of flags and their descriptions.
 set default-flags "hp"
 
 # Enter all user-defined fields that should be displayed in a '.whois'.
@@ -384,7 +383,6 @@ set dupwait-timeout 5
 # wrong channels, or generally do things that you do not want. Please make
 # sure that you have double-checked every setting. There's also a similar line
 # lower down, just to make sure you're reading :)
-
 die "Please make sure you edit your config file completely."
 
 
