--- a/eggdrop.simple.conf
+++ b/eggdrop.simple.conf
@@ -1,13 +1,11 @@
 #! /path/to/executable/eggdrop
 # ^- Set that to the directory eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.simple.conf,v 1.18 2002/03/09 21:14:14 wcc Exp $
+# $Id: eggdrop.simple.conf,v 1.19 2002/05/28 20:15:59 wcc Exp $
 #
 # This is a sample configuration file for your bot.  You will definitely
 # want to edit this to set up your bot. Right now, it creates a bot called
 # "LamestBot" which sits on the channel #lamest.
-#
-# More options can be found in files in doc/settings/.
 #
 # IMPORTANT: Remember to make install and cd to the directory it created
 # (~/eggdrop by default) before you continue. Running the bot from
@@ -18,7 +16,7 @@
 #
 # More options can be found in the files in doc/settings/.
 
-# Don't edit the following 12 lines.
+# Don't edit the following 11 lines.
 set mod-path "modules/"
 set help-path "help/"
 set text-path "text/"
@@ -31,7 +29,7 @@ loadmodule notes
 loadmodule console
 loadmodule blowfish
 
-# Start configuring here!
+# Start configuring here.
 
 ##### Settings:
 
@@ -71,10 +69,8 @@ channel add #lamest {
 channel set #lamest +enforcebans +dynamicbans +userbans
 channel set #lamest +dynamicexempts +userexempts +dynamicinvites +userinvites
 channel set #lamest -autoop -bitch +protectops +protectfriends +dontkickops
-channel set #lamest +greet +statuslog
-channel set #lamest +revenge +autovoice
-channel set #lamest -secret -shared +cycle
-channel set #lamest -inactive -seen +nodesynch
+channel set #lamest +greet +statuslog +revenge +autovoice -secret -shared
+channel set #lamest -inactive -seen +nodesynch +cycle
 
 # [0/1/2/3/4/5] What is your network?
 # 0 = EFnet (non +e/+I hybrid)
@@ -127,7 +123,7 @@ set console "mkcobxs"
 loadmodule uptime
 
 # You have to remove this line to make your bot start.
-die "you didn't edit your config file! that's a NO NO"
+die "Please make sure you edit your config file completely."
 
 ##### SCRIPTS #####
 
